--- a/web/src/css/base.css
+++ b/web/src/css/base.css
@@ -7,13 +7,13 @@ ul{font-size: 0;}
 .top-notify p{padding: 7px 0;font: 12px/22px "微软雅黑";}
 .top-notify span{margin-left: 206px;}
 .top-notify a{margin-left: 12px;color: #21a557;}
-.top-notify i{display:inline-block;width:64px;height:12px;margin-left: 668px;background: url(../../res/images/sprite.png) no-repeat -160px -102px;}
+.top-notify i{display:inline-block;width:64px;height:12px;margin-left: 668px;background: url(../../res/images/sprite.png) no-repeat -160px -102px;cursor: pointer;}
 /*导航区*/
 .nav{height: 81px;padding: 1px 0 7px 0;font: 16px/21px "微软雅黑";color: #666;}
 .nav p{display:inline-block;margin: 30px 0;height: 21px;vertical-align: middle;}
 .nav i{display: inline-block;width: 235px;height: 21px;margin-left: 206px;background: url(../../res/images/sprite.png) no-repeat 0 0;}
-.nav button{display:inline-block;width: 54px;height: 21px;border:none;margin-left: 31px;background: url(../../res/images/sprite.png) no-repeat 0 -102px;}
-.nav span{margin-left: 14px;font: 12px/21px "宋体";}
+.nav button{display:inline-block;width: 54px;height: 21px;border:none;margin-left: 31px;background: url(../../res/images/sprite.png) no-repeat 0 -102px;vertical-align: top;}
+.nav span{margin-left: 14px;font: 12px/21px "宋体";vertical-align: top;}
 .nav a[href*="open"]{margin-left: 418px;}
 .nav a[href*="study"]{margin-left: 54px;}
 .nav a[href*="icourse"]{margin-left: 54px;}
@@ -23,6 +23,7 @@ ul{font-size: 0;}
 .nav .search:hover{background: url(../../res/images/sprite.png) no-repeat -273px -102px;}
 /*轮播图*/
 .fixed .banner{height: 460px;}
+.fixed .banner iframe{width: 100%;height: 460px;} 
 /*产品介绍*/
 .fixed .product{height: 298px;margin-left: 206px;}
 .product li{display: inline-block;width: 423px;height: 174px;margin: 62px 0;}
@@ -53,17 +54,19 @@ ul{font-size: 0;}
 /*tab按钮*/
 .left .tab{width: 400px;box-shadow: 0 1px 2px #d4d3d3;} /*ie8不兼容box-shadow*/
 .left .tab button{width: 200px;height: 50px;border: none;font: 20px/22px "微软雅黑";color: white;background: #39a030;}
-/*课程列表*/
+.left .tab button:first-child{color: #666;background: white;}
+/*.left.tab*/
+/*课程列表基本样式*/
 .left ul{margin-top: 29px;}
-.left ul li{display: inline-block;position: relative;width: 225px;height: 228px;margin-right: 20px;margin-bottom: 20px;background: white;box-shadow: 0 1px 2px #e6e6e6;}
-.left ul li img{width: 223px;height: 124px;margin: 1px;background: blue;}
+.left ul li{display: inline-block;width: 225px;height: 228px;margin-right: 20px;margin-bottom: 20px;background: white;box-shadow: 0 1px 2px #e6e6e6;}
+.left ul li img{width: 223px;height: 124px;margin: 1px;background: blue;vertical-align: text-top;}
 .left ul li h5{margin-left: 5px;margin-top: 8px;font: 12px/1 "微软雅黑";text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
 .left ul li .normal{height: 82px;margin-left: 5px;}
 .left ul li span{display: block;margin-top: 10px;}
-.left ul li .publisher{font: 12px/1 "微软雅黑";color: #999;}
-.left ul li .people{width: 40px;height: 16px;border: 1px solid #ddd;font: 8px/16px "微软雅黑";color: #bbb;border-radius: 1px;} /*ie8不兼容border-radius*/
+.left ul li .normal .publisher{font: 12px/1 "微软雅黑";color: #999;}
+.left ul li .normal .people{width: 40px;height: 16px;border: 1px solid #ddd;font: 8px/16px "微软雅黑";color: #bbb;border-radius: 1px;} /*ie8不兼容border-radius*/
 .left ul li .people:before{content: "";display: inline-block;width: 9px;height: 12px;margin:2px 6px 2px 3px;background: url(../../res/images/sprite.png) no-repeat -234px 0;vertical-align: middle;}
-.left ul li .price{font: 12px/1 "微软雅黑";color: #ff3f00;}
+.left ul li .normal .price{font: 12px/1 "微软雅黑";color: #ff3f00;}
 .left ul li .hover{display: none;}
 /*翻页器*/
 .left .turn-page{width: 302px;height: 20px;margin-top: 31px;margin-left: 658px;text-align: center;vertical-align: middle;}
@@ -81,12 +84,13 @@ ul{font-size: 0;}
 .right .agency{height: 229px;box-shadow: 0 1px 2px #d4d3d3;background: white;}
 .right .agency h4{height: 22px;border-bottom: 1px solid #ddd;padding: 16.5px 0 16.5px 20px;} 
 .right .agency p{margin-top: 20px;margin-left: 22px;font: 14px/22px "微软雅黑";color: #666;}
-.right .agency img{width: 180px;height: 110px;}
+.right .agency img{width: 180px;height: 110px;cursor: pointer;}
 /*最热排行*/
 .right .hot-rank{margin-top: 21px;background: white;box-shadow: 0 1px 2px #d4d3d3;}
 .right .hot-rank h4{height: 22px;padding: 17px 0 17px 20px;border-bottom: 1px solid #eee;}
 .right .hot-rank ul{margin:19px 0 0 20px;padding-bottom: 1px;}
 .right .hot-rank ul li{height: 50px;margin-bottom: 20px;}
+.right .hot-rank ul li:hover{border-right: 1px solid #cbcbcb;}
 .right .hot-rank ul li img{display: inline-block;width: 50px;height: 50px;background: blue;}
 .right .hot-rank ul li div{display: inline-block;height: 50px;margin-left: 12px;vertical-align: top;}
 .right .hot-rank ul li div h5{margin-bottom: 10px;text-overflow: ellipsis;overflow: hidden;white-space: nowrap;font: 14px/1 "微软雅黑";}
